Fix more missing icons and other minor tweaks

--- a/dillo/src/themes/dillo/styles/_helpers.sass
+++ b/dillo/src/themes/dillo/styles/_helpers.sass
@@ -92,11 +92,16 @@ $screen-md-max: $screen-lg-min - 1
 .pointer-events-none
 	pointer-events: none
 
+=position-absolute-center
+	position: absolute
+	top: 50%
+	left: 50%
+	transform: translate(-50%, -50%)
+
 =text-overflow-ellipsis
 	overflow: hidden
 	white-space: nowrap
 	text-overflow: ellipsis
-
 
 =text-body
 
