--- a/dillo/src/themes/dillo/templates/posts/form.jade
+++ b/dillo/src/themes/dillo/templates/posts/form.jade
@@ -128,7 +128,7 @@ script.
 			var url = $('#url').val();
 
 			// We're trying to load the link stuff
-			$('.post-submit-field-loading').html('<i class="fa fa-spin fa fa-spinner"></i>');
+			$('.post-submit-field-loading').html('<i class="di-spinner spin"></i>');
 
 			$.embedly.extract(url).progress(function (data) {
 
@@ -146,7 +146,7 @@ script.
 					$('.post-submit-field-loading').addClass('error');
 					$('.post-submit-field-submit').addClass('disabled');
 				} else {
-					$('.post-submit-field-loading').html('<i class="fa fa-check"></i>');
+					$('.post-submit-field-loading').html('<i class="di-check"></i>');
 					$('.post-submit-field-loading').addClass('success');
 					$('.post-submit-field-submit').removeClass('disabled');
 				}
@@ -164,7 +164,7 @@ script.
 				if (data.favicon_url) {
 					$('.post-submit-field-favicon').html('<img src="' + data.favicon_url + '"/>')
 				} else {
-					$('.post-submit-field-favicon').html('<i class="fa fa-globe"></i>')
+					$('.post-submit-field-favicon').html('<i class="di-globe"></i>')
 				}
 				;
 
@@ -205,7 +205,7 @@ script.
 				e.preventDefault();
 
 				// Let us know submission is in progress
-				$('.post-submit-field-submit').html('<i class="fa fa-spinner fa-spin"></i> <i>Submitting...</i>');
+				$('.post-submit-field-submit').html('<i class="di-spinner spin"></i> <i>Submitting...</i>');
 
 				var data = $(this).serialize();
 				var url = $(this).attr('action');
@@ -223,7 +223,7 @@ script.
 					// All went just fine! Let's see the post
 					$('.post-submit-field-submit').removeClass('houston');
 					$('.post-submit-field-submit').addClass('success');
-					$('.post-submit-field-submit').html('<i class="fa fa-check"></i> Success!');
+					$('.post-submit-field-submit').html('<i class="di-check"></i> Success!');
 					window.location.replace(data['post_url']);
 
 				})
@@ -231,7 +231,7 @@ script.
 
 					// Problem found!
 					$('.post-submit-field-submit').addClass('houston');
-					$('.post-submit-field-submit').html('<i class="fa fa-frown-o fa-spin"></i> Houston! Try again?');
+					$('.post-submit-field-submit').html('<i class="di-unhappy"></i> Houston! Try again?');
 
 				});
 		});
