Markdown: Whitelist Vimeo embed

--- a/dillo/src/themes/dillo/templates/posts/form.jade
+++ b/dillo/src/themes/dillo/templates/posts/form.jade
@@ -164,7 +164,7 @@ script.
 				if (data.favicon_url) {
 					$('.post-submit-field-favicon').html('<img src="' + data.favicon_url + '"/>')
 				} else {
-					$('.post-submit-field-favicon').html('<i class="di-globe"></i>')
+					$('.post-submit-field-favicon').html('<i class="di-link"></i>')
 				}
 				;
 
