Posts Index: Center icons for post type

--- a/dillo/src/themes/dillo/styles/main.sass
+++ b/dillo/src/themes/dillo/styles/main.sass
@@ -473,7 +473,7 @@ blockquote
 	& i
 		top: 45%
 		opacity: 0.6
-		@extend .vertical-align
+		+position-absolute-center
 	&.link
 		background-color: lighten($color_brand_main, 20%)
 	&.text
