--- a/dillo/src/themes/dillo/styles/main.sass
+++ b/dillo/src/themes/dillo/styles/main.sass
@@ -1001,6 +1001,9 @@ blockquote
 			height: 36px
 			width: 36px
 			z-index: 1
+			pointer-events: none
+			&.active
+				pointer-events: initial
 
 		& #social
 			position: relative
