--- a/dillo/src/themes/dillo/templates/layout.jade
+++ b/dillo/src/themes/dillo/templates/layout.jade
@@ -13,7 +13,6 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		meta(name="keywords", content="{{ config.SETTINGS_KEYWORDS }}")
 		meta(name="description", content="{{ config.SETTINGS_TAGLINE }}")
 		meta(name="author", content="{{ config.SETTINGS_TITLE | safe }}")
-		meta(name="theme-color", content="#4D84A0")
 		meta(name="csrf-token", content="{{ csrf_token() }}")
 
 		// Open Graph
@@ -21,13 +20,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		meta(property="og:description", content="{{ config.SETTINGS_TAGLINE }}")
 		| {% block og %}{% endblock %}
 
-		// Styles
-		link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css",rel="stylesheet")
-		link(href="{{ url_for_theme_static('css/main.css') }}", rel="stylesheet")
-
-		// Fonts
-		link(href='//fonts.googleapis.com/css?family=Open+Sans:400&subset=latin,latin-ext', rel='stylesheet', type='text/css')
-		link(href='//fonts.googleapis.com/css?family=Oxygen:400,300&subset=latin,latin-ext', rel='stylesheet', type='text/css')
+		| {% include '_layout_head.html' %}
 
 		link(href="{{ config.SETTINGS_FAVICON }}", rel="icon", type="image/png")
 
@@ -79,30 +72,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 				button.action.dialog__button-close(data-dialog-close)
 					i.di-cancel
 
-
-		// Javascript
-		script(src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js", type="text/javascript")
-		script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", type="text/javascript")
-		script(src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js", type="text/javascript")
-		script(src="//cdn.embed.ly/jquery.embedly-3.1.1.min.js", type="text/javascript")
-		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.10/js/min/perfect-scrollbar.jquery.min.js", type="text/javascript")
-		script(src="{{url_for_theme_static('js/tutti.min.js')}}", type="text/javascript")
-
-		script.
-
-			$('#popover-home').popover();
-			$('#cd-dropdown').dropdown( {gutter : 5 } );
-
-			$(document).ready(function () {
-				{% if current_user.is_anonymous() %}
-					$('.popover-submit').popover();
-				{% else %}
-					page_title = document.title;
-
-					$('#popover-settings').popover();
-					$('#popover-logout').popover();
-				{% endif %}
-			});
+		| {% include '_layout_scripts.html' %}
 
 		| {% block footer_scripts %}{% endblock %}
 
