Branding: Limit logo image to 100%

--- a/dillo/src/themes/dillo/styles/main.sass
+++ b/dillo/src/themes/dillo/styles/main.sass
@@ -2254,6 +2254,7 @@ fieldset
 	& .user-register-branding-logo
 		display: block
 		margin: 15px auto 0 auto
+		max-width: 100%
 		+transition(opacity, 0.2s, ease)
 		&:hover
 			opacity: 0.9
