Check if post-edit-content textarea is available for markdown
Fixes #20

--- a/dillo/src/themes/dillo/templates/posts/view.jade
+++ b/dillo/src/themes/dillo/templates/posts/view.jade
@@ -743,8 +743,10 @@ script(type="text/javascript").
 				};
 
 				// Markdown
-				var text = $("#post-edit-content textarea").val();
-				$("#post-view-content").html(convert(text));
+				if (document.getElementById("post-edit-content textarea") !== null){
+					var text = $("#post-edit-content textarea").val();
+					$("#post-view-content").html(convert(text));
+				}
 
 				$.post($(this).attr("href"), tosubmit,
 					function(data){
