Add support for Twitter cards

--- a/dillo/src/themes/dillo/templates/layout.jade
+++ b/dillo/src/themes/dillo/templates/layout.jade
@@ -15,10 +15,18 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		meta(name="author", content="{{ config.SETTINGS_TITLE | safe }}")
 		meta(name="csrf-token", content="{{ csrf_token() }}")
 
-		// Open Graph
+		| {# Meta info for Open Graph and Twitter Cards #}
 		meta(property="og:site_name", content="{{ config.SETTINGS_TITLE | safe }}")
+		meta(name="twitter:card" content="summary_large_image")
+		meta(name="twitter:site" content="@{{ config.SETTINGS_TWITTER_USERNAME }}")
+		| {% block og %}
+		meta(name="twitter:creator" content="@{{ config.SETTINGS_TWITTER_USERNAME }}")
+		meta(name="twitter:title" content="{{ config.SETTINGS_TITLE | safe }}")
+		meta(name="twitter:description" content="{{ config.SETTINGS_TAGLINE }}")
 		meta(property="og:description", content="{{ config.SETTINGS_TAGLINE }}")
-		| {% block og %}{% endblock %}
+		meta(name="twitter:image" content="{{ config.SETTINGS_LOGO_IMAGE }}")
+		meta(property="og:image", content="{{ config.SETTINGS_LOGO_IMAGE }}")
+		| {% endblock %}
 
 		| {% include '_layout_head.html' %}
 
