--- a/dillo/src/themes/dillo/templates/posts/view.jade
+++ b/dillo/src/themes/dillo/templates/posts/view.jade
@@ -3,31 +3,38 @@
 
 | {% block og %}
 meta(property="og:type", content="article")
-meta(property="og:title", content="{{post.title}} - {{ config.SETTINGS_TITLE | safe}}")
+meta(property="og:title", content="{{post.title}} - {{ config.SETTINGS_TITLE | safe }}")
+meta(name="twitter:title" content="{{post.title}} - {{ config.SETTINGS_TITLE | safe }}")
+
+| {% if post.content %}
+meta(name="twitter:description", content="{{ post.content | safe }}")
+meta(property="og:description", content="{{ post.content | safe }}")
+| {% endif %}
+
 meta(property="og:url",
 		 content="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}")
 
 | {% if post.picture %}
 meta(property="og:image", content="{{post.thumbnail('h')}}")
-| {% else %}
-meta(property="og:image",
-		 content="{{ url_for('static', filename='images/favicon_192x192.png') }}")
+meta(name="twitter:image", content="{{post.thumbnail('h')}}")
 | {% endif %}
 
 meta(property="article:title", content="{{post.title}}")
 
-
 | {% if post.user.first_name and post.user.first_name != 'None' %}
 meta(property="article:author",
 		 content="{{post.user.first_name}} {{post.user.last_name}}")
+meta(name="twitter:creator",
+		 content="{{post.user.first_name}} {{post.user.last_name}}")
 | {% else %}
 meta(property="article:author",
+		 content="{{post.user.username}}")
+meta(name="twitter:creator",
 		 content="{{post.user.username}}")
 | {% endif %}
 
 meta(property="article:published_time",
 		 content="{{post.creation_date}}")
-
 | {% endblock %}
 
 | {% block page_title %}{{post.title}} -{% endblock %}
