--- a/dillo/templates/dillo/index.pug
+++ b/dillo/templates/dillo/index.pug
@@ -1,6 +1,6 @@
-| {% extends 'pistacchio/layout.pug' %}
+| {% extends 'dillo/layout.pug' %}
 | {% block bodyattrs %}{{ super() }} data-context='dashboard'{% endblock %}
 | {% block page_title %}Dashboard{% endblock %}
 | {% block body %}
-h1 Welcome to Pistacchio
+h1 Dillo
 | {% endblock %}
