--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,2 +1,6 @@
-body
-	color: crimson
+@import ../../../pillar/src/styles/_config
+@import ../../../pillar/src/styles/_utils
+@import ../../../pillar/src/styles/base
+
+@import _config
+@import _base
