--- a/dillo/templates/dillo/layout.pug
+++ b/dillo/templates/dillo/layout.pug
@@ -8,15 +8,31 @@ html(lang='en')
 
 		| {% block head %}{% endblock %}
 		link(href='//fonts.googleapis.com/css?family=Roboto:300,400', rel='stylesheet', type='text/css')
-		link(href="{{ url_for('static_pillar', filename='assets/css/vendor/bootstrap.min.css', v=171120161) }}", rel='stylesheet')
 		link(href="{{ url_for('static_pillar', filename='assets/css/font-pillar.css', v=171120161) }}", rel='stylesheet')
-		link(href="{{ url_for('static_pillar', filename='assets/css/base.css', v=171120161) }}", rel='stylesheet')
 		link(href="{{ url_for('static_dillo', filename='css/main.css', v=171120161) }}", rel='stylesheet')
 
 		script(src="{{ url_for('static_pillar', filename='assets/js/vendor/jquery-3.1.0.min.js', v=171120161)}}")
-		script(src="{{ url_for('static_pillar', filename='assets/js/vendor/jquery.bootstrap-3.3.7.min.js', v=171120161) }}")
 		script(src="{{ url_for('static_pillar', filename='assets/js/tutti.min.js', v=171120161) }}")
+		script(src="{{ url_for('static_dillo', filename='js/generated/tutti.min.js', v=171120161) }}", async)
+
 		| {% block style %}{% endblock %}
+
 	body
-		| {% block body %}{% endblock %}
+		#app-header
+			#header-bar-pri
+				a.app-branding(href="/") Dillo
+				.wgt-search
+					input(
+						type="text",
+						placeholder="Search Dillo...")
+
+				#header-bar-pri-user
+					| Log in
+
+			#header-bar-sec
+		#app-main
+			| {% block body %}{% endblock %}
+
+		#app-overlay
+
 		| {% block footer_scripts %}{% endblock %}
