--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -4,7 +4,7 @@ $font-body: 'Roboto', sans-serif
 $font-headings: 'Raleway'
 $font-size: 16px
 $font-size-small: 12px
-$font-size-large: 20px
+$font-size-large: 22px
 
 /* Colors */
 $color-background: #eaebec
@@ -13,8 +13,12 @@ $color-background-dark: darken($color-background, 5%)
 
 $color-text: #4d4e53
 $color-text-light: rgba($color-text, .8)
+$color-text-hint: rgba($color-text, .5)
 
-$color-primary: crimson
+$color-primary: #558ca4
+$color-secondary: crimson
 
+$color-vote-up: #ff8b60
+$color-vote-down: #74a4ff
 
 $header-bar-pri-size: 40px
